<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".NoteActivity">

    <TextView
        android:id="@+id/struct_view_22"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="#66000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_add" />

    <TextView
        android:id="@+id/struct_view_23"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#66000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/struct_view_24"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#66000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task" />

    <TextView
        android:id="@+id/struct_view_25"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#66000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remark" />

    <TextView
        android:id="@+id/struct_view_26"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_22" />

    <TextView
        android:id="@+id/struct_view_27"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_22" />

    <TextView
        android:id="@+id/struct_view_28"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_24"
        app:layout_constraintStart_toStartOf="@+id/struct_view_23"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_26" />

    <TextView
        android:id="@+id/struct_view_29"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_25"
        app:layout_constraintStart_toStartOf="@+id/struct_view_23"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_28" />

    <TextView
        android:id="@+id/struct_view_30"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_27" />

    <TextView
        android:id="@+id/struct_view_31"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_30" />

    <TextView
        android:id="@+id/struct_view_32"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_23"
        app:layout_constraintStart_toEndOf="@+id/tip_date"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_22" />

    <TextView
        android:id="@+id/struct_view_33"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_24"
        app:layout_constraintStart_toEndOf="@+id/tip_date"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_32" />

    <TextView
        android:id="@+id/struct_view_34"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="#66000000"
        app:layout_constraintBottom_toTopOf="@+id/struct_view_25"
        app:layout_constraintStart_toEndOf="@+id/tip_date"
        app:layout_constraintTop_toBottomOf="@+id/struct_view_33" />

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/input_date"
        android:inputType="number"
        android:textColor="#000000"
        android:textColorHint="#66000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tip_date"
        app:layout_constraintTop_toBottomOf="@+id/tip_add" />

    <EditText
        android:id="@+id/task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/input_task"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#66000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tip_content"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/remark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="@string/input_remark"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#66000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tip_remark"
        app:layout_constraintTop_toBottomOf="@+id/task" />

    <Button
        android:id="@+id/add_task"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="#2969BD"
        android:paddingLeft="10dp"
        android:paddingTop="0dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/struct_view_2" />

    <TextView
        android:id="@+id/struct_view_2"
        android:layout_width="1dp"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="#66000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="20dp"
        android:background="#2969BD"
        android:paddingLeft="10dp"
        android:paddingTop="0dp"
        android:paddingRight="10dp"
        android:paddingBottom="0dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/struct_view_2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tip_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/date"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_add" />

    <TextView
        android:id="@+id/tip_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/task"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_date" />

    <TextView
        android:id="@+id/tip_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/remark"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip_content" />

    <TextView
        android:id="@+id/tip_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tip_add"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>